--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "rxapp",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
+  "name": "rxapp",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
     "web-watch": "webpack --progress --colors --watch",
     "rn-watch": "tsc --watch",
     "start": "node node_modules/react-native/local-cli/cli.js start",
@@ -12,21 +12,24 @@
     "@types/node": "^7.0.12",
     "@types/webpack": "^2.2.14",
     "awesome-typescript-loader": "3.1.2",
+    "browser-sync": "^2.18.12",
+    "browser-sync-webpack-plugin": "^1.2.0",
     "source-map-loader": "^0.1.6",
     "ts-node": "^3.0.2",
     "typescript": "2.1.6",
-    "webpack": "2.2.1"
+    "webpack": "2.2.1",
+    "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
-    "reactxp": "0.42.0-rc.3",
     "react": "^15.4.1",
-		"react-native": "^0.42.0",
     "react-addons-perf": "15.5.0-rc.2",
     "react-addons-test-utils": "15.5.1",
     "react-dom": "15.5.3",
-   "react-native-windows": "^0.33.0"
+    "react-native": "^0.42.0",
+    "react-native-windows": "^0.33.0",
+    "reactxp": "0.42.0-rc.3"
   },
-	"jest": {
-		"preset": "react-native"
-	}
+  "jest": {
+    "preset": "react-native"
+  }
 }
